--- a/ControlBonus/ControlBonus.csproj
+++ b/ControlBonus/ControlBonus.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="branch.cs" />
+    <Compile Include="gretel.cs" />
     <Compile Include="Hanz.cs" />
     <Compile Include="node.cs" />
     <Compile Include="Program.cs" />
